--- a/src/counter/Counter.module.css
+++ b/src/counter/Counter.module.css
@@ -62,6 +62,22 @@
 .btnReset {
     color: orangered;
 }
+.btnSet {
+    width: 70%;
+    margin: 0 auto;
+}
 .disabledBtn {
     opacity: 0.5;
+}
+.display_settings {
+    display: flex;
+    flex-direction: column;
+}
+.display_settings label {
+    font-size: large;
+    font-weight: bold;
+}
+.display_settings input {
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
